YS-04 feat: add lang support & made fixs

--- a/src/translation/ru/ru.json
+++ b/src/translation/ru/ru.json
@@ -1,3 +1,15 @@
 {
-  "": ""
+  "Ya": "Я",
+  "Search - the app for searching books!": "поищю - приложение для поиска книг!",
+  "Just start tapping.": "Просто начните искать.",
+  "for": "для",
+  "with ♥": "с ♥",
+  "Author": "Автор",
+  "Publish data": "Дата публикации",
+  "Publisher": "Издатель",
+  "Search": "Найти",
+  "next": "следующая",
+  "Previous": "Предыдущая",
+  "Empty request": "Задан пустой поисковой запрос",
+  "Nothing was found for your request": "По вашему запросу ничего не нашлось"
 }
