YS-05 feat: add adaptive fonts

--- a/src/translation/ru/ru.json
+++ b/src/translation/ru/ru.json
@@ -1,6 +1,6 @@
 {
   "Ya": "Я",
-  "Search - the app for searching books!": "поищю - приложение для поиска книг!",
+  "Search - the app for searching books!": "поищю — приложение для поиска книг!",
   "Just start tapping.": "Просто начните искать.",
   "for": "для",
   "with ♥": "с ♥",
@@ -8,6 +8,7 @@
   "Publish data": "Дата публикации",
   "Publisher": "Издатель",
   "Search": "Найти",
+  "SearchYa": "поищю",
   "next": "следующая",
   "Previous": "Предыдущая",
   "Empty request": "Задан пустой поисковой запрос",
