--- a/src/translation/en/en.json
+++ b/src/translation/en/en.json
@@ -1,6 +1,6 @@
 {
   "Ya": "Ya",
-  "Search - the app for searching books!": "Search - the app for searching books!",
+  "Search - the app for searching books!": "Search — the app for searching books!",
   "Just start tapping.": "Just start tapping.",
   "for": "for",
   "with ♥": "with ♥",
@@ -8,6 +8,7 @@
   "Publish data": "Publish data",
   "Publisher": "Publisher",
   "Search": "Search",
+  "SearchYa": "Search",
   "next": "next",
   "Previous": "Previous",
   "Empty request": "Empty request",
