master fix: fix en translation

--- a/src/translation/en/en.json
+++ b/src/translation/en/en.json
@@ -12,5 +12,6 @@
   "next": "next",
   "Previous": "Previous",
   "Empty request": "Empty request",
-  "Nothing was found for your request": "Nothing was found for your request"
+  "Nothing was found for your request": "Nothing was found for your request",
+  "© 2021 from": "© 2021 from"
 }
