--- a/src/translation/ru/ru.json
+++ b/src/translation/ru/ru.json
@@ -2,8 +2,6 @@
   "Ya": "Я",
   "Search - the app for searching books!": "поищю — приложение для поиска книг!",
   "Just start tapping.": "Просто начните искать.",
-  "for": "для",
-  "with ♥": "с ♥",
   "Author": "Автор",
   "Publish data": "Дата публикации",
   "Publisher": "Издатель",
@@ -12,5 +10,6 @@
   "next": "следующая",
   "Previous": "Предыдущая",
   "Empty request": "Задан пустой поисковой запрос",
-  "Nothing was found for your request": "По вашему запросу ничего не нашлось"
+  "Nothing was found for your request": "По вашему запросу ничего не нашлось",
+  "© 2021 from": "© 2021 от "
 }
